src/test/deca/codegen/invalid/resultats/var7-ima.res
  ** IMA ** ERREUR ** Ligne 53 : 
    CMP avec op1 : adresse memoire et op2 : indefini
